--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydandy"
-version = "0.0.1"
+version = "0.0.0"
 description = "A handy-dandy datastore built on top of Pydantic"
 authors = ["Will Johns <will@wcj.dev>"]
 license = "MIT"
@@ -20,10 +20,21 @@ flake8 = "^5.0.4"
 isort = "^5.10.1"
 mypy = "^0.971"
 pre-commit = "^2.20.0"
+python-semantic-release = "^7.31.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.semantic_release]
+version_variable = [
+    "pydandy/__init__.py:__version__",
+    "pyproject.toml:version"
+]
+branch = "main"
+upload_to_pypi = false
+upload_to_release = true
+build_command = "pip install poetry && poetry build"
 
 [tool.black]
 line-length = 120
